added section tag and ul tag to html for the card list items

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="/screen.css">
   </head>
   <body>
-    <h1 class='hello-world'></h1>
+    <h1 class='hello-world'>All Cards on Deck</h1>
+    <section class='deck-of-cards'>
+      <ul>
+      </ul>
+    </section>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
