added button tag to html to deal a card when clicking on card
wrote the fisher yates algorithm in order to shuffle the deck

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <h1 class='hello-world'>All Cards on Deck</h1>
+    <button class="deal-card"></button>
     <section class='deck-of-cards'>
       <ul>
       </ul>
