--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <h1 class='hello-world'>All Cards on Deck</h1>
-    <button class="deal-card"></button>
+    <button class="deal-card">Deal a Card</button>
     <section class='deck-of-cards'>
-      <ul>
+      <ul> 
+        <li class='card-dealt'></li>
       </ul>
     </section>
     <script src="/main.js" charset="utf-8"></script>
