added styles for the borders of face down and face up decks. updated the values in the variables to spell out suit and face cards
created HTML to render the value of a card then the suit image

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,17 @@
   </head>
   <body>
     <h1 class='hello-world'>All Cards on Deck</h1>
-    <button class="deal-card">Deal a Card</button>
-    <section class='deck-of-cards'>
+    <section class='card-decks'>
+    <section class="deck-of-cards-facedown">Deal a Card</section>
+    <section class='deck-of-cards-faceup'>
       <ul> 
-        <li class='card-dealt'></li>
+        <li class='card-dealt-list'>
+          <p class='card-dealt'></p>
+          <p class='card-suit-icon'></p>
+        </li>
       </ul>
     </section>
+  </section>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
