--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,19 @@
     <section class='card-decks'>
     <section class="deck-of-cards-facedown">Deal a Card</section>
     <section class='deck-of-cards-faceup'>
-      <ul> 
+      <ul class='player-hand'> 
         <li class='card-dealt-list'>
-          <p class='card-dealt'></p>
+          <p class='card-dealt-value'></p>
           <p class='card-suit-icon'></p>
         </li>
+        <li class='card-2-dealt-list'>
+            <p class='card-dealt-value'></p>
+            <p class='card-suit-icon'></p>
+          </li>
       </ul>
     </section>
   </section>
-    <script src="/main.js" charset="utf-8"></script>
+    <!-- <script src="/main.js" charset="utf-8"></script> -->
+    <script src="/notes.js" charset="utf-8"></script>
   </body>
 </html>
