--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,21 @@
     <section class='deck-of-cards-faceup'>
       <ul class='player-hand'> 
         <li class='card-dealt-list'>
-          <p class='card-dealt-value'></p>
-          <p class='card-suit-icon'></p>
+          <p class='card-dealt-value player-1-rank'></p>
+          <p class='card-suit-icon player-1-rank'></p>
         </li>
-        <li class='card-2-dealt-list'>
-            <p class='card-dealt-value'></p>
-            <p class='card-suit-icon'></p>
-          </li>
       </ul>
     </section>
+    <section class='deck-of-cards-faceup'>  
+      <ul>  
+        <li class='card-2-dealt-list'>
+              <p class='card-dealt-value player-2-rank'></p>
+              <p class='card-suit-icon player-2-suit'></p>
+            </li>
+          </ul>
+    </section>
   </section>
-    <!-- <script src="/main.js" charset="utf-8"></script> -->
-    <script src="/notes.js" charset="utf-8"></script>
+    <script src="/main.js" charset="utf-8"></script>
+    <!-- <script src="/notes.js" charset="utf-8"></script> -->
   </body>
 </html>
