created the card faces and values as an object to incorporate scores for each player

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
           </ul>
     </section>
   </section>
+  <section class='hit-stand-buttons'>
+    <button class='hit-me-button'>Hit Me</button>
+    <button class='stand-button'>Stand</button>
+  </section>
     <script src="/main.js" charset="utf-8"></script>
     <!-- <script src="/notes.js" charset="utf-8"></script> -->
   </body>
