--- a/public/index.html
+++ b/public/index.html
@@ -14,16 +14,16 @@
     <section class='deck-of-cards-faceup'>
       <ul class='player-hand'> 
         <li class='card-dealt-list'>
-          <p class='card-dealt-value player-1-rank'></p>
-          <p class='card-suit-icon player-1-rank'></p>
+          <p class='card-dealt-value player-1-score'></p>
+          <!-- <p class='card-suit-icon player-1-rank'></p> -->
         </li>
       </ul>
     </section>
     <section class='deck-of-cards-faceup'>  
       <ul>  
         <li class='card-2-dealt-list'>
-              <p class='card-dealt-value player-2-rank'></p>
-              <p class='card-suit-icon player-2-suit'></p>
+              <p class='card-dealt-value player-2-score'></p>
+              <!-- <p class='card-suit-icon player-2-suit'></p> -->
             </li>
           </ul>
     </section>
