added image for back of a card. got the page load deal to give 2 cards faceup and dealer gets 2 facedow cards. created functions for initial hand deal to player and to dealer. working toward another function that is triggered when hit me button is clicked to ensure that only one card is dealt to player and or dealer per button click

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
   <section class='hit-stand-buttons'>
     <button class='hit-me-button'>Hit Me</button>
     <button class='stand-button'>Stand</button>
+    <button class='reset-button'>Reset</button>
   </section>
     <script src="/main.js" charset="utf-8"></script>
     <!-- <script src="/notes.js" charset="utf-8"></script> -->
